- Added RapidCloud Parser & Fixed StreamSB Parser. - Added Subtitles in exoplayer & fix nav bar & theme issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,5 +114,6 @@
         Try another source.
     </string>
     <string name="novel_na">Novels are not supported yet!</string>
-    <string name="quality_selector">Select Quality</string>
+    <string name="server_selector">Select Server</string>
+    <string name="make_default">Make Default</string>
 </resources>
