- Added Fillers Viewing for Zoro - Removed Image Compression, now wasting people's internet, kitsu fucking us over - Slightly fixed navigation for media info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,5 @@
     <string name="novel_na">Novels are not supported yet!</string>
     <string name="server_selector">Select Server</string>
     <string name="make_default">Make Default</string>
+    <string name="filler">Filler</string>
 </resources>
