- Fixed more crashes - Fixed boring Genre Collection, now It shows what genres it collected - Reorder the video player elements. - Add Screen Rotate option if auto-rotate is turned off

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="slogan">The Best Anime, Manga &amp; Novel app for Android.</string>
     <string name="login">Login</string>
 
-    <string name="discord">https://discord.gg/SB2aAgKMcA</string>
+    <string name="discord">https://discord.gg/5TXAWTU5qr</string>
     <string name="telegram">https://telegram.me/saikou_app</string>
     <string name="github">https://github.com/saikou-app/saikou</string>
 
