--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,9 @@
     <string name="characters">Characters</string>
     <string name="relations">Relations</string>
 
+    <string name="roles">Roles</string>
+    <string name="details">Details</string>
+
     <string name="play_yt">Play on Youtube</string>
     <string name="eps">Episodes</string>
     <string name="ep">Episode</string>
