--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,9 +39,9 @@
     <string name="popular_manga">Popular Manga</string>
 
     <string name="username">Username</string>
-    <string name="chapters_read">Chapters Read : </string>
-    <string name="episodes_watched">Episodes Watched : </string>
-    <string name="continue_reading">Continue Reading</string>
+    <string name="chapters_read">Chapters Read</string>
+    <string name="episodes_watched">Episodes Watched\u0008</string>
+    <string name="continue_reading">Continue Reading\u0008</string>
     <string name="continue_watching">Continue Watching</string>
     <string name="recommended">Recommended</string>
 
@@ -99,14 +99,6 @@
     <string name="chaps">Chapters</string>
     <string name="chap">Chapter</string>
     <string name="wrong">Wrong Title?</string>
-    <string-array name="anime_sources">
-        <item>GOGO</item>
-        <item>GOGO-DUB</item>
-        <item>9ANIME</item>
-        <item>9ANIME-DUB</item>
-        <item>ZORO</item>
-        <item>TWIST</item>
-    </string-array>
     <string-array name="manga_sources">
         <item>MANGABUDDY</item>
         <item>MANGASEE</item>
@@ -122,4 +114,6 @@
     <string name="auto_select_server">Auto Selecting Server</string>
     <string name="make_default">Make Default</string>
     <string name="filler">Filler</string>
+    <string name="adult">Adult</string>
+    <string name="tag">Tag</string>
 </resources>
