--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,9 +39,9 @@
     <string name="popular_manga">Popular Manga</string>
 
     <string name="username">Username</string>
-    <string name="chapters_read">Chapters Read</string>
+    <string name="chapters_read">Chapters Read\u0008</string>
     <string name="episodes_watched">Episodes Watched\u0008</string>
-    <string name="continue_reading">Continue Reading\u0008</string>
+    <string name="continue_reading">Continue Reading</string>
     <string name="continue_watching">Continue Watching</string>
     <string name="recommended">Recommended</string>
 
